fix: select align

--- a/packages/uhk-web/src/app/components/add-on/add-on.component.scss
+++ b/packages/uhk-web/src/app/components/add-on/add-on.component.scss
@@ -26,8 +26,11 @@
                         display: inline-block;
                         margin-bottom: 0.5em;
                         margin-top: 0.5em;
-                        margin-left: 1.5em;
                         width: 150px;
+
+                        &.align-slider {
+                            margin-left: 1.5em;
+                        }
                     }
                 }
             }
